2009-09-20 Fix off-by-one error in dviread.Tfm, and additionally protect
           against exceptions in case a dvi font is missing some metrics - JKS

2009-09-15 Implement draw_text and draw_tex method of backend_base using
           the textpath module. Implement draw_tex method of the svg 
           backend. - JJL

2009-09-15 Don't fail on AFM files containing floating-point bounding boxes - JKS

2009-09-13 AxesGrid : add modified version of colorbar. Add colorbar 
           location howto. - JJL

2009-09-07 AxesGrid : implemented axisline style. 
           Added a demo examples/axes_grid/demo_axisline_style.py- JJL

2009-09-04 Make the textpath class as a separate moduel 
           (textpath.py). Add support for mathtext and tex.- JJL

2009-09-01 Added support for Gouraud interpolated triangles.
           pcolormesh now accepts shading='gouraud' as an option. - MGD

2009-08-29 Added matplotlib.testing package, which contains a Nose
           plugin and a decorator that lets tests be marked as
           KnownFailures - ADS

2009-08-20 Added scaled dict to AutoDateFormatter for customized
           scales - JDH

2009-08-15 Pyplot interface: the current image is now tracked at the
           figure and axes level, addressing tracker item 1656374. - EF

2009-08-15 Docstrings are now manipulated with decorators defined
           in a new module, docstring.py, thanks to Jason Coombs. - EF

2009-08-14 Add support for image filtering for agg back end. See the example
           demo_agg_filter.py. -JJL

2009-08-09 AnnotationBbox added. Similar to Annotation, but works with
           OffsetBox instead of Text. See the example
           demo_annotation_box.py. -JJL

2009-08-07 BboxImage implemented. Two examples, demo_bboximage.py and
           demo_ribbon_box.py added. - JJL

2009-08-07 In an effort to simplify the backend API, all clipping rectangles
           and paths are now passed in using GraphicsContext objects, even