@@ -1,3 +1,6 @@
+2009-09-20 Add Sphinx extension to highlight IPython console sessions,
+           originally authored (I think) by Michael Droetboom. - FP
+
 2009-09-20 Fix off-by-one error in dviread.Tfm, and additionally protect
            against exceptions in case a dvi font is missing some metrics - JKS
 
